Support for on-cluster-profiling and arguments for task size for transformation components